update reponsive fix

--- a/index.html
+++ b/index.html
@@ -293,32 +293,36 @@
 
 
          <div class="blog__body">
-            <div class="blog-box blog-box--post1">
-               <a href="">
-                  <img src="./img/post1.jpg" alt="" class="blog-box__img">
-                  <div class="blog-content">
-                     <div class="blog-box__title">Blog's Title</div>
-                     <div class="blog-box__subtitle">Blog short description</div>
+            <div class="grid wide">
+               <div class="blog__wrapper">
+                  <div class="blog-box blog-box--post1">
+                     <a href="">
+                        <img src="./img/post1.jpg" alt="" class="blog-box__img">
+                        <div class="blog-content">
+                           <div class="blog-box__title">Blog's Title</div>
+                           <div class="blog-box__subtitle">Blog short description</div>
+                        </div>
+                     </a>
                   </div>
-               </a>
-            </div>
-            <div class="blog-box blog-box--post2">
-               <a href="">
-                  <img src="./img/post2.jpg" alt="" class="blog-box__img">
-                  <div class="blog-content">
-                     <div class="blog-box__title">Blog's Title</div>
-                     <div class="blog-box__subtitle">Blog short description</div>
+                  <div class="blog-box blog-box--post2">
+                     <a href="">
+                        <img src="./img/post2.jpg" alt="" class="blog-box__img">
+                        <div class="blog-content">
+                           <div class="blog-box__title">Blog's Title</div>
+                           <div class="blog-box__subtitle">Blog short description</div>
+                        </div>
+                     </a>
                   </div>
-               </a>
-            </div>
-            <div class="blog-box blog-box--post3">
-               <a href="">
-                  <img src="./img/post3.jpg" alt="" class="blog-box__img">
-                  <div class="blog-content">
-                     <div class="blog-box__title">Blog's Title</div>
-                     <div class="blog-box__subtitle">Blog short description</div>
+                  <div class="blog-box blog-box--post3">
+                     <a href="">
+                        <img src="./img/post3.jpg" alt="" class="blog-box__img">
+                        <div class="blog-content">
+                           <div class="blog-box__title">Blog's Title</div>
+                           <div class="blog-box__subtitle">Blog short description</div>
+                        </div>
+                     </a>
                   </div>
-               </a>
+               </div>
             </div>
          </div>
       </section>
@@ -412,7 +416,7 @@
                   <img src="./img/Black-logo.png" alt="Logo Zeus">
                </div>
 
-               <ul class="about-social">
+               <!-- <ul class="about-social">
                   <li class="about-social__item"><a href="" class="about-social__link"><i
                            class='bx bxl-facebook'></i></a></li>
                   <li class="about-social__item"><a href="" class="about-social__link"><i
@@ -421,7 +425,13 @@
                            class='bx bxl-twitter'></i></a></li>
                   <li class="about-social__item"><a href="" class="about-social__link"><i class='bx bxs-phone'></i></a>
                   </li>
-               </ul>
+               </ul> -->
+               <div class="about__desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vitae placeat veritatis quibusdam cum
+                  ex quas numquam laborum eaque nihil voluptatum est ullam expedita qui ipsa, repellat, ipsam iusto
+                  atque.
+               </div>
+
             </div>
 
             <!-- Second Section -->
