--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
          <div class="new-releases__body">
             <div class="grid wide">
                <!-- First Row -->
-               <div class="product-wapper">
+               <div class="product-wrapper">
                   <div class="row">
                      <div class="product-box col l-3 m-3 c-6">
                         <div class="product__img">
