update new page and login

--- a/hotsale.html
+++ b/hotsale.html
@@ -31,7 +31,7 @@
 
             <input type="checkbox" hidden id="menu-control" class="menu-control">
             <div class="navbar__navigation">
-               <ul ul class="navigation">
+               <ul class="navigation">
                   <label for="menu-control" class="cancel-icon">
                      <i class='bx bx-x'></i>
                   </label>
@@ -43,19 +43,25 @@
                   <li class="navigation__item"><a href="about.html" class="navigation__link">ABOUT US</a>
                   </li>
                   <li class="navigation__item"><a href="blog.html" class="navigation__link">BLOG</a></li>
+                  <li class="navigation__item menu-mobile"><a href="#" class="navigation__link"><i
+                           class='bx bx-search'></i></a></li>
+                  <li class="navigation__item menu-mobile"><a href="login.html" class="navigation__link"><i
+                           class='bx bx-user'></i></a></li>
+                  <li class="navigation__item menu-mobile"><a href="shoppingcart.html" class="navigation__link"><i
+                           class='bx bx-cart'></i></a></li>
                </ul>
             </div>
 
             <div class="navbar__service">
-               <div class="service__search">
+               <a href="#" class="service__search">
                   <i class='bx bx-search'></i>
-               </div>
-               <div class="service__user">
+               </a>
+               <a href="./login.html" class="service__user">
                   <i class='bx bx-user'></i>
-               </div>
-               <div class="service__cart">
+               </a>
+               <a href="./shoppingcart.html" class="service__cart">
                   <i class='bx bx-cart'></i>
-               </div>
+               </a>
             </div>
 
             <label for="menu-control" class="navbar__menu-toggle">
