--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -82,7 +82,7 @@
          <tr>
             <td>
                <div class="cart-info">
-                  <img src="../Asset/img/nike-shoes-blue.png">
+                  <img src="../img/nike-shoes-blue.png">
                   <div class="cart-info__information">
                      <p>Nike Free Basketball</p>
                      <small>Price:$500.00</small>
