--- a/hotsale.html
+++ b/hotsale.html
@@ -83,7 +83,7 @@
          <div class="page-state__list">
             <a href="index.html" class="page-state__link">Home</a>
             <span>></span>
-            <a href="productpage.html" class="page-state__link">Hot Sale</a>
+            <a href="hotsale.html" class="page-state__link">Hot Sale</a>
          </div>
       </div>
    </div>
