--- a/product.html
+++ b/product.html
@@ -82,7 +82,7 @@
          <div class="page-state__list">
             <a href="index.html" class="page-state__link">Home</a>
             <span>></span>
-            <a href="productpage.html" class="page-state__link">Products</a>
+            <a href="product.html" class="page-state__link">Products</a>
          </div>
       </div>
    </div>
