--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <li class="navigation__item menu-mobile"><a href="login.html" class="navigation__link"><i
                            class='bx bx-user'></i></a></li>
                   <li class="navigation__item menu-mobile"><a href="shoppingcart.html" class="navigation__link"><i
-                           class='bx bx-cart'></i></a></li>
+                           class='bx bx-cart-alt'></i></a></li>
                </ul>
             </div>
 
@@ -58,7 +58,7 @@
                   <i class='bx bx-user'></i>
                </a>
                <a href="./shoppingcart.html" class="service__cart">
-                  <i class='bx bx-cart'></i>
+                  <i class='bx bx-cart-alt'></i>
                </a>
             </div>
 
@@ -86,9 +86,9 @@
       <section class="hero">
          <div class="grid wide">
             <div class="hero__inform">
-               <h3 class="inform__title">Lorem ipsum</h3>
-               <p class="inform__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim at bibendum
-                  egestas blandit pulvinar eu elementum vel ultrices. </p>
+               <h3 class="inform__title">FASHION FOR MEN'S</h3>
+               <p class="inform__desc">Fashion is more than price, style is more than fame, and acceptance is more than
+                  popularity. #zeus is wear individuality meets commonality. </p>
                <button class="btn inform__btn">shop now</button>
             </div>
          </div>
@@ -129,62 +129,62 @@
                <!-- First Row -->
                <div class="product-wrapper">
                   <div class="row">
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/adidas tenis.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/adidas tenis.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Tenis T-Shirt three line</div>
                         <div class="product__price">$100</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/adidas hoodie.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/adidas hoodie.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Adidas Hoodie</div>
                         <div class="product__price">$120</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/nike T-shirt 2.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/nike T-shirt 2.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Nike T-shirt Black</div>
                         <div class="product__price">$95</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/nike T-shirt.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/nike T-shirt.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Nike T-shirt</div>
                         <div class="product__price">$100</div>
@@ -195,62 +195,62 @@
                <!-- Second Row -->
                <div class="product-wapper">
                   <div class="row">
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/Pant grey.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/Pant grey.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Adidas Grey Pants</div>
                         <div class="product__price">$100</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/sweatpant black.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/sweatpant black.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Adidas Sweat Pants</div>
                         <div class="product__price">$120</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/nike  air force 1.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/nike  air force 1.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Nike Air Force 1</div>
                         <div class="product__price">$200</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6">
+                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
                         <div class="product__img">
-                           <a href="">
-                              <img src="./img/Nike custome air max 90.jpg" alt="">
-                              <div class="product-interaction-bg"></div>
-                              <div class="product-interaction">
-                                 <i class='bx bx-show'></i>
-                                 <i class='bx bx-cart'></i>
-                                 <i class='bx bx-heart'></i>
-                              </div>
-                           </a>
+
+                           <img src="./img/Nike custome air max 90.jpg" alt="">
+                           <div class="product-interaction-bg"></div>
+                           <div class="product-interaction">
+                              <i class='bx bx-show'></i>
+                              <i class='bx bx-cart'></i>
+                              <i class='bx bx-heart'></i>
+                           </div>
+
                         </div>
                         <div class="product__name">Nike Air Max 90 custome</div>
                         <div class="product__price">$180</div>
@@ -271,9 +271,12 @@
                         Nike <span class="air">Air</span> <span class="sesh">Sesh</span>
                      </div>
                      <div class="banner-news__desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla accusamus sunt repudiandae
-                        vel?
-                        Aliquid, placeat
+                        Give golf a go like World Champion sprinter Dina Asher-Smith. Or take a swing at tennis like
+                        WNBA star Sabrina Ionescu. Step up to the plate with eight-time Paralympic international
+                        medalist Blake Leeper or take aim at archery like award-winning artist Rosalía. Whatever it is
+                        you want to do, go for it.
+                        Sure, it might not be pretty. But, trying something you have never done before is how you Play
+                        New. And that is always a win
                      </div>
                      <div class="btn banner-news__btn">Discover</div>
                   </div>
@@ -292,8 +295,10 @@
       <section class="blog">
          <div class="heading-section blog__heading">
             <div class="heading-title blog__title">blog</div>
-            <div class="heading-subtitle blog__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Molestiae aspernatur culpa quo!
+            <div class="heading-subtitle blog__subtitle">Listen up, men. Whilst we universally condone the use of
+               compression tights without shorts (unless you are from the Russian ballet), there is a way to make today
+               is
+               activewear look stylish without looking like a walking billboard for Nike or Adidas.
             </div>
          </div>
 
@@ -314,8 +319,8 @@
                      <a href="">
                         <img src="./img/post2.jpg" alt="" class="blog-box__img">
                         <div class="blog-content">
-                           <div class="blog-box__title">Blog's Title</div>
-                           <div class="blog-box__subtitle">Blog short description</div>
+                           <div class="blog-box__title">How To Wear Casual Sportswear & Look Damn Cool</div>
+                           <div class="blog-box__subtitle">Keep It Athletic Up Top</div>
                         </div>
                      </a>
                   </div>
@@ -323,8 +328,8 @@
                      <a href="">
                         <img src="./img/post3.jpg" alt="" class="blog-box__img">
                         <div class="blog-content">
-                           <div class="blog-box__title">Blog's Title</div>
-                           <div class="blog-box__subtitle">Blog short description</div>
+                           <div class="blog-box__title">How To Wear The Iconic Snapback For Guys</div>
+                           <div class="blog-box__subtitle">Snapback & A Shirt</div>
                         </div>
                      </a>
                   </div>
@@ -433,9 +438,8 @@
                   </li>
                </ul> -->
                <div class="about__desc">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vitae placeat veritatis quibusdam cum
-                  ex quas numquam laborum eaque nihil voluptatum est ullam expedita qui ipsa, repellat, ipsam iusto
-                  atque.
+                  Fashion is more than price, style is more than fame, and acceptance is more than popularity. #zeus is
+                  wear individuality meets commonality.
                </div>
 
             </div>
