--- a/productdetail.html
+++ b/productdetail.html
@@ -43,7 +43,7 @@
                   <label for="menu-control" class="cancel-icon">
                      <i class='bx bx-x'></i>
                   </label>
-                  <li class="navigation__item "><a href="index.html" class="navigation__link active">HOME</a></li>
+                  <li class="navigation__item "><a href="index.html" class="navigation__link">HOME</a></li>
                   <li class="navigation__item"><a href="product.html" class="navigation__link">PRODUCT</a>
                   </li>
                   <li class="navigation__item"><a href="hotsale.html" class="navigation__link">HOT SALE</a>
